we modified something

--- a/CodeProblem_1.html
+++ b/CodeProblem_1.html
@@ -31,7 +31,7 @@
             <li> Assisting Professor in project proposal presentation.</li>
         </ul>
     </ul>
-    <h1>TECHNICAL SKILLS</h1><hr/>
+    <h1>hihihi TNICAL SKILLS</h1><hr/>
     <ol>
         <li> Programming and development skills
             <ul> 
